# beneficial-ownership-explorer

./: .gitignore  README.md  boexplorer.toml.example  pyproject.toml  requirements.txt  rxconfig.py
boexplorer/: boexplorer.py  config.py  search.py  state.py  style.py
boexplorer/apis/: __init__.py  bulgaria_cr.py  czech_cr.py  denmark_cvr.py  estonia_rik.py  france_inpi.py  gleif.py  latvia_ur.py  nigeria_cac.py  poland_krs.py  protocol.py  slovakia_orsr.py  uk_psc.py
boexplorer/bulk_data/: download.py  search.py
boexplorer/components/: table.py
boexplorer/data/: data.py  org-id-aa2f415794.csv  org-id-aa2f415794.json
boexplorer/display/: details.py  geolocation.py  table.py
boexplorer/download/: authentication.py  caching.py  query.py  stealth.py  utils.py
boexplorer/layout/: navbar.py
boexplorer/query/: name.py  person.py
boexplorer/transforms/: annotations.py  bods_0_2_0.py  bods_0_4_0.py  utils.py
boexplorer/utils/: dates.py  html.py  text.py
tests/: test_bulgaria.py  test_caching.py  test_czech_cr.py  test_denmark_cvr.py  test_estonia_rik.py  test_france_inpi.py  test_gleif.py  test_latvia_ur.py  test_nigeria.py  test_poland_krs.py  test_slovakia_orsr.py  test_transform_entity_0_2_0.py  test_transform_entity_0_4_0.py  test_transform_relationship.py  test_uk_psc.py  utils.py
tests/fixtures/: bulgaria_company_details_result.json  bulgaria_company_search_result.json  entity_data.json  relationship_data.json
