[project]
name="boexplorer"
description = "Web application for dynamic querying of APIs to explorer beneficial ownership data"
version = "0.1"
requires-python = '>=3.10'
dependencies = ["reflex",
                "tomli",
                "httpx",
                "diskcache",
                "selenium-stealth",
                "webdriver-manager",
                "pycountry",
                "pytz",
                "python-dateutil",
                "dateparser",
                "transliterate",
                "geopy",
                "plotly",
                "parsel",
                "random-user-agent",
                "thefuzz",
                "pytest-asyncio"]
readme="README.md"
license = {text= "AGPLv3"}
authors = [
  { name = 'Open Ownership', email='code@opendataservices.coop' },
]

[project.urls]
homepage = 'https://github.com/openownership/beneficial-ownership-search'
documentation = 'https://github.com/openownership/beneficial-ownership-search'
repository = 'https://github.com/openownership/beneficial-ownership-search'

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
